--- a/src/main.html
+++ b/src/main.html
@@ -1,30 +1,16 @@
 <html>
 <head>
-	<style>
-		.draggable { width: 150px; height: 150px; padding: 0.5em; }
-	</style>
 	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
-	<script type="text/javascript">
-		var Dragbox = function(str) {
-			ret = document.createElement("div");
-			ret.setAttribute("class", "draggable");
-			ret.innerHTML = str;
-			return ret;
-		}
-		
-		function addDraggable(target, drag) {
-			target.appendChild(drag);
-			$(function() {
-				$(".draggable").draggable();
-			});
-		}
-	</script>
-</head>
+	<script src="drag.js"></script>
+	<link type="text/css" href="drag.css" rel="stylesheet"></link>
+	</head>
 <body>
 	<div id="insertbox">
-		<input type="text" id="entry" value="Enter URL here"/><br/>
-		<input type="button" value="Smang" onclick="javascript:addDraggable(document.getElementById('main'),new Dragbox(document.getElementById('entry').getAttribute('value')))"/>
+		<form name="insertf" id="insertf">
+			<input type="text" id="entry" name="entry"/><br/>
+			<input type="button" value="Smang" onclick="javascript:addDraggable(document.getElementById('main'),new Dragbox(document.insertf.entry.value))"/>
+		</form>
 	</div>
 	<div id="main">
 	<span id="empty"></span> <!--it is trolling-->
