--- a/smang/smang.html
+++ b/smang/smang.html
@@ -43,7 +43,7 @@
 </template>
 
 <template name="link">
-	<div class="draggable" style=" absolute; left: {{dragx}}px; top: {{dragy}}px;">
+	<div class="draggable" style="position: absolute; left: {{dragx}}px; top: {{dragy}}px;">
 		<a href="{{dragtext}}">{{dragtext}}</a>
 	</div>
 </template>
