--- a/smang/smang.html
+++ b/smang/smang.html
@@ -18,6 +18,11 @@
 	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
 	<script src="smang.js"></script>
+	<script type="text/javascript">
+		setInterval(function () {$(function() {
+			$(".draggable").draggable({containment:parent});
+		});}, 100);
+	</script>
 	<link type="text/css" href="smang.css" rel="stylesheet"></link>
 	</head>
 <body>
@@ -40,6 +45,7 @@
 	{{#each links}}
 		{{> link}}
 	{{/each}}
+
 </template>
 
 <template name="link">
