Dragging and users implemented

--- a/smang/smang.html
+++ b/smang/smang.html
@@ -21,6 +21,9 @@
 	<link type="text/css" href="smang.css" rel="stylesheet"></link>
 	</head>
 <body>
+	<div style="width: 100%; float: right">
+		{{loginButtons}}
+	</div>
 	{{> input}}
 	<div id="main">
 	<span id="empty"></span> <!--it is trolling-->
