--- a/smang/smang.html
+++ b/smang/smang.html
@@ -58,20 +58,19 @@
 		{{#if soundcloud}}
 			<div id="sc_{{id}}">
 				{{> sclink}}
-<!--
-				<script type="text/javascript">
-				var h = SC.oEmbed(str, {auto_play: true}, function(oEmbed){}).html;
-				document.getElementById("sc_{{id}}").appendChild(h);
-				</script>
--->
 			</div>
 		{{else}}
-		<a href="{{dragtext}}" target="_blank">{{dragtext}}</a>
-	<!--	<span class="owner"> Owner: {{user}}</span> -->
+			{{#if youtube}}
+				<div id="yt_{{id}}">
+					{{> ytlink}}
+				</div>
+			{{else}}
+				<a href="{{dragtext}}" target="_blank">{{dragtext}}</a>
+				<!--	<span class="owner"> Owner: {{user}}</span> -->	
+			{{/if}}
 		{{/if}}
 	</div>
 </template>
 
-<template name="sclink">
-
-</template>
+<template name="sclink"></template>
+<template name="ytlink"></template>
