--- a/smang/smang.html
+++ b/smang/smang.html
@@ -1,19 +1,3 @@
-<!--
-<head>
-  <title>smang</title>
-</head>
-
-<body>
-  {{> hello}}
-</body>
-
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
-</template>
--->
-
 <head>
 	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
@@ -32,6 +16,9 @@
 	<span id="empty"></span> <!--it is trolling-->
 	{{> display}}
 	</div>
+	<div id="chat">
+	{{> chat}}
+	</div>
 </body>
 
 <template name="input">
@@ -42,6 +29,17 @@
 	</div>
 </template>
 
+<template name="chat">
+	<input type="text" id="chatentry"/>
+	<input type="button" class="speak" value="Chat"/><br/>
+	{{#each chats}}
+		{{> chatmessage}}
+	{{/each}}
+</template>
+
+<template name="chatmessage">
+	<span class="messageview">{{owner}}: {{message}}</span><br/>	
+</template>
 
 <template name="display">
 	{{#each links}}
@@ -79,7 +77,7 @@
 							<img src={{dragtext}} />
 							{{else}}
 							<a href="{{dragtext}}" target="_blank">{{dragtext}}</a>
-							<!--	<span class="owner"> Owner: {{user}}</span> -->	
+							<!--	<span class="owner"> Owner: {{user}}</span>	-->
 						{{/if}}
 					{{/if}}
 				{{/if}}
