--- a/smang/smang.html
+++ b/smang/smang.html
@@ -12,10 +12,11 @@
 	<div style="width: 100%; float: right">
 	</div>
 	{{> input}}
-	<div id="main">
 	<span id="empty"></span> <!--it is trolling-->
+	<div id="main">
 	{{> display}}
 	</div>
+	</span>
 	<div id="chat">
 	{{> chat}}
 	</div>
@@ -23,7 +24,7 @@
 
 <template name="input">
 	<div id="insertbox">
-		{{loginButtons}}
+		<span style="color:white">{{loginButtons}}</span>
 		<input type="text" id="entry"/>
 		<input type="button" class="add" value="Smang it"/>
 	</div>
