chats now appear in order from most recent to least recent

--- a/smang/smang.html
+++ b/smang/smang.html
@@ -81,9 +81,8 @@
 							{{else}}
 							{{#if islink}}
 							<a href="{{dragtexthtml}}" target="_blank">{{dragtext}}</a>
-							<!--	<span class="owner"> Owner: {{user}}</span>	-->
 							{{else}}
-							<p>{{dragtext}}</p>
+							{{dragtext}}
 							{{/if}}
 						{{/if}}
 					{{/if}}
