--- a/smang/smang.html
+++ b/smang/smang.html
@@ -2,6 +2,7 @@
 	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
 	<script src="http://connect.soundcloud.com/sdk.js"></script>
+	<script src="http://stevenlevithan.com/assets/misc/date.format.js"></script>
 	<script src="smang.js"></script>
 	<script type="text/javascript">
 		SC.initialize({client_id: "3d1d5a4094779d1981143b9fbf190de5"});
@@ -13,9 +14,7 @@
 	</div>
 	{{> input}}
 	<span id="empty"></span> <!--it is trolling-->
-	<div id="main">
 	{{> display}}
-	</div>
 	</span>
 	<div id="chat">
 	{{> chat}}
@@ -39,15 +38,15 @@
 </template>
 
 <template name="chatmessage">
-	<span class="messageview"><span style="font-weight:bold; color: blue;">{{owner}}</span>: {{message}}</span><br/>	
+	<span class="messageview"><span style="font-weight:bold; color: blue;">{{owner}}</span> <span style="font-size:8pt; color: gray;">({{timestamp}})</span>: {{message}} </span><br/>	
 </template>
 
 <template name="display">
-	{{#constant}}
+	<div class="main">
 	{{#each links}}
 		{{> link}}
 	{{/each}}
-	{{/constant}}
+	</div>
 </template>
 
 <template name="link">
